added sample codes

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,22 @@
 </div>
 <p>abc  <abbr title="title">abbreviation</abbr>  is  here</p>
 <p>abc  <abbr title="title2">abbr2</abbr>  is  here</p>
+<a href="#" >Test Link here</a>
+<table>
+    <caption>Caption</caption>
+    <thead><tr>
+        <th>Col1</th>
+        <th>Col2</th>
+    </tr></thead>
+    <tbody>
+    <tr><td>RowC1</td><td>Rowc2</td></tr>
+    <tr><td>RowC1</td><td>Rowc2</td></tr>
+    <tr><td>RowC1</td><td>Rowc2</td></tr>
+    <tr><td>RowC1</td><td>Rowc2</td></tr>
+    <tr><td>RowC1</td><td>Rowc2</td></tr>
+
+    </tbody>
+</table>
 <script src="javascripts/displayAbbreviations.js"></script>
 <script src="javascripts/example.js"></script>
 </body>
