updated test code

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Through the Looking-Glass</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery.js"></script>
- <!--   <script src="01.js"></script>-->
+    <script src="javascripts/01.js"></script>
 </head>
 <body>
 <h1>Through the Looking-Glass</h1>
