trying jquery event

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
 </head>
 <body>
 
+<div id="switcher" class="switcher">
+    <h3>Style Switcher</h3>
+    <button id="switcher-default">
+        Default
+    </button>
+    <button id="switcher-narrow"> 5
+        Narrow Column
+    </button>
+    <button id="switcher-large">
+        Large Print
+    </button>
+</div>
+
 <h1>Through the Looking-Glass</h1>
 <div class="author">by Lewis Carroll</div>
 <div class="chapter" id="chapter-1">
