trying css animation

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,14 @@
     <button id="switcher-large">
         Large Print
     </button>
+    <button id="switcher-bigger">
+        Bigger
+    </button>
+    <button id="switcher-smaller">
+        Smaller
+    </button>
 </div>
-
+<!--
 <h1>Through the Looking-Glass</h1>
 <div class="author">by Lewis Carroll</div>
 <div class="chapter" id="chapter-1">
@@ -149,7 +155,25 @@ right way again."</span></p>
         </tr>
     </table>
 </div>
-
+-->
+<div class="speech">
+    <p>Fourscore and seven years ago our fathers brought forth
+        on this continent a new nation, conceived in liberty,
+        and dedicated to the proposition that all men are
+        created equal.
+    </p>
+    <p>Now we are engaged in a great civil war, testing whether
+        that nation, or any nation so conceived and so dedicated,
+        can long endure. We are met on a great battlefield of
+        that war. We have come to dedicate a portion of that
+        field as a final resting-place for those who here gave
+        their lives that the nation might live. It is altogether
+        fitting and proper that we should do this. But, in a
+        larger sense, we cannot dedicate, we cannot consecrate,
+        we cannot hallow, this ground.
+    </p>
+    <a href="#" class="more">read more</a>
+    ... </div>
 
 </body>
 </html>
