--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
                 href="http://en.wikipedia.org/wiki/Pentagon">Pentagons
         </a>.
     </p>
-    <p class="nobility hexagon">Next above these come the
+    <p class="nobility hexagon">Next above these come the <span
+            class="footnote">And how perfect a proof of the natural
+fitness and, I may almost say, the divine origin of the
+aristocratic constitution of the States of Flatland!</span>
         Nobility, of whom there are several degrees, beginning at
         Six-Sided Figures, or <a
                 href="http://en.wikipedia.org/wiki/Hexagon">Hexagons</a>,
@@ -40,12 +43,71 @@
     <p><span class="pull-quote">It is a <span class="drop">Law
 of Nature</span> with us that a male child shall have
 <strong>one more side</strong> than his father</span>, so
-        that each generation shall rise (as a rule) one step in
+        that each generation shall rise (as a rule) one step in <span
+                class="footnote">And how perfect a proof of the natural
+fitness and, I may almost say, the divine origin of the
+aristocratic constitution of the States of Flatland!</span>
         the scale of development and nobility. Thus the son of a
         Square is a Pentagon; the son of a Pentagon, a Hexagon;
         and so on.
     </p>
-    <!-- . . . code continues . . . -->
+    <p class="nobility hexagon">Next above these come the
+        Nobility, of whom there are several degrees, beginning at
+        Six-Sided Figures, or <a
+                href="http://en.wikipedia.org/wiki/Hexagon">Hexagons</a>,
+        and from thence rising in the number of their sides till
+        they receive the honourable title of <a
+                href="http://en.wikipedia.org/wiki/Polygon">Polygonal</a>,
+        or many-Sided. Finally when the number of the sides
+        becomes so numerous, and the sides themselves so small,
+        that the figure cannot be distinguished from a <a
+                href="http://en.wikipedia.org/wiki/Circle">circle</a>, he
+        is included in the Circular or Priestly order; and this is
+        the highest class of all.
+    </p>
+    <p class="nobility hexagon">Next above these come the
+        Nobility, of whom there are several degrees, beginning at
+        Six-Sided Figures, or <a
+                href="http://en.wikipedia.org/wiki/Hexagon">Hexagons</a>,
+        and from thence rising in the number of their sides till
+        they receive the honourable title of <a
+                href="http://en.wikipedia.org/wiki/Polygon">Polygonal</a>,
+        or many-Sided. Finally when the number of the sides
+        becomes so numerous, and the sides themselves so small,
+        that the figure cannot be distinguished from a <a
+                href="http://en.wikipedia.org/wiki/Circle">circle</a>, he
+        is included in the Circular or Priestly order; and this is
+        the highest class of all.
+    </p>
+    <p class="nobility hexagon">Next above these come the
+        Nobility, of whom there are several degrees, beginning at
+        Six-Sided Figures, or <a
+                href="http://en.wikipedia.org/wiki/Hexagon">Hexagons</a>,
+        and from thence rising in the number of their sides till
+        they receive the honourable title of <a
+                href="http://en.wikipedia.org/wiki/Polygon">Polygonal</a>,
+        or many-Sided. Finally when the number of the sides
+        becomes so numerous, and the sides themselves so small,
+        that the figure cannot be distinguished from a <a
+                href="http://en.wikipedia.org/wiki/Circle">circle</a>, he
+        is included in the Circular or Priestly order; and this is
+        the highest class of all.
+    </p>
+
+    <p>How admirable is the Law of Compensation! <span
+            class="footnote">And how perfect a proof of the natural
+fitness and, I may almost say, the divine origin of the
+aristocratic constitution of the States of Flatland!</span>
+        By a judicious use of this Law of Nature, the Polygons and
+        Circles are almost always able to stifle sedition in its 2 very cradle, taking advantage of the irrepressible and
+        boundless hopefulness of the human mind.&hellip;
+    </p>
+</div>
+<div>
+---------
+</div>
+<div id="footer">
+    footer here...
 </div>
 </body>
 </html>
