finished json/xml get practise

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="javascripts/01.js"></script>
 </head>
 <body>
-
+<a href="dict.html">Dictionary</a>
 <h1 id="f-title">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
