trying jquery plugins

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Through the Looking-Glass</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery.js"></script>
+    <script src="javascripts/jquery.cycle.all.js"></script>
     <script src="javascripts/01.js"></script>
 </head>
 <body>
@@ -106,6 +107,8 @@ aristocratic constitution of the States of Flatland!</span>
 <div>
 ---------
 </div>
+
+
 <div id="footer">
     footer here...
 </div>
