--- a/public/dict.html
+++ b/public/dict.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
 
     <script src="javascripts/jquery.js"></script>
+    <script src="javascripts/jquery.cycle.all.js"></script>
     <script src="javascripts/01.js"></script>
 </head>
 <body>
@@ -15,19 +16,39 @@
             <h3><a href="entries-a.html">A</a></h3>
         </div>
         <div class="letter" id="letter-b">
-            <h3><a href="entries-a.html">B</a></h3>
+            <h3><a href="entries-b.html">B</a></h3>
         </div>
         <div class="letter" id="letter-c">
-            <h3><a href="entries-a.html">C</a></h3>
+            <h3><a href="entries-c.html">C</a></h3>
         </div>
         <div class="letter" id="letter-d">
-            <h3><a href="entries-a.html">D</a></h3>
+            <h3><a href="entries-d.html">D</a></h3>
+        </div>
+        <div class="letter" id="letter-h">
+            <h3><a href="entries-.html">H</a></h3>
         </div>
         <!-- and so on -->
     </div>
 
     <div id="dictionary">
     </div>
+    <ul id="books">
+        <li>
+            <img src="images/jq-game.jpg" alt="jQuery Game Development
+Essentials" />
+            <div class="title">jQuery Game Development Essentials</div>
+            <div class="author">Salim Arsever</div>
+        </li>
+        <li>
+            <img src="images/jqmobile-cookbook.jpg" alt="jQuery Mobile
+Cookbook" />
+            <div class="title">jQuery Mobile Cookbook</div>
+            <div class="author">Chetan K Jain</div>
+        </li>
+        ...
+    </ul>
+
+
 
 </body>
 </html>
