trying jquery UI plugins

--- a/public/dict.html
+++ b/public/dict.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <script src="javascripts/jquery.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="javascripts/jquery.cycle.all.js"></script>
     <script src="javascripts/01.js"></script>
 </head>
@@ -29,9 +31,11 @@
         </div>
         <!-- and so on -->
     </div>
-
     <div id="dictionary">
     </div>
+
+    <div id="slider"></div>
+
     <ul id="books">
         <li>
             <img src="images/jq-game.jpg" alt="jQuery Game Development
@@ -45,7 +49,24 @@ Cookbook" />
             <div class="title">jQuery Mobile Cookbook</div>
             <div class="author">Chetan K Jain</div>
         </li>
-        ...
+        <li>
+            <img src="images/jqmobile-cookbook.jpg" alt="jQuery Mobile
+Cookbook" />
+            <div class="title">jQuery Mobile Cookbook</div>
+            <div class="author">Chetan K Jain</div>
+        </li>
+        <li>
+            <img src="images/jqmobile-cookbook.jpg" alt="jQuery Mobile
+Cookbook" />
+            <div class="title">jQuery Mobile Cookbook</div>
+            <div class="author">Chetan K Jain</div>
+        </li>
+        <li>
+            <img src="images/jqmobile-cookbook.jpg" alt="jQuery Mobile
+Cookbook" />
+            <div class="title">jQuery Mobile Cookbook</div>
+            <div class="author">Chetan K Jain</div>
+        </li>
     </ul>
 
 
