trying jquery mobile  components

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <a href="dict.html">Dictionary</a>
+<a href="mobile.html">Mobile</a>
 <h1 id="f-title">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
