--- a/public/mobile.html
+++ b/public/mobile.html
@@ -11,8 +11,8 @@
     <script src="javascripts/jquery.mobile.js"></script>
 </head>
 <body>
-<div data-role="page">
-    <div data-role="header">
+<div data-role="page" >
+    <div data-role="header" data-add-back-btn="true">
         <h1>Selected jQuery Books</h1>
     </div>
     <div data-role="content">
