--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery.js"></script>
     <script src="javascripts/jquery.cycle.all.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="javascripts/01.js"></script>
 </head>
 <body>
 <a href="dict.html">Dictionary</a>
 <a href="mobile.html">Mobile</a>
-<h1 id="f-title">Flatland: A Romance of Many Dimensions</h1>
+<h1 id="f-title" data-tooltip-text="tooltip here">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
 <h3 id="f-subtitle">
