--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 <body>
 <a href="dict.html">Dictionary</a>
 <a href="mobile.html">Mobile</a>
+<a href="topic.html">Topic</a>
 <h1 id="f-title" data-tooltip-text="tooltip here">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
