trying customized  selector

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8">
     <title>Through the Looking-Glass</title>
     <link rel="stylesheet" href="stylesheets/style.css">
-    <script src="javascripts/jquery.js"></script>
-    <script src="javascripts/jquery.cycle.all.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="javascripts/01.js"></script>
 </head>
 <body>
 <a href="dict.html">Dictionary</a>
 <a href="mobile.html">Mobile</a>
 <a href="topic.html">Topic</a>
+<a href="gallery.html">Gallery</a>
 <h1 id="f-title" data-tooltip-text="tooltip here">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
@@ -115,5 +112,11 @@ aristocratic constitution of the States of Flatland!</span>
 <div id="footer">
     footer here...
 </div>
+
+<script src="javascripts/jquery.js"></script>
+<script src="javascripts/jquery.cycle.all.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="javascripts/01.js"></script>
+
 </body>
 </html>
