--- a/public/topic.html
+++ b/public/topic.html
@@ -39,7 +39,7 @@
         <td>John Resig</td>
         <td>Community</td>
     </tr>
-    <tr>
+    <tr id="release">
         <td>Apr 15</td>
         <td>jQuery 1.6 Beta 1 Released</td>
         <td>John Resig</td>
