--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <a href="topic.html">Topic</a>
 <a href="gallery.html">Gallery</a>
 <a href="animation.html">Animation</a>
+<a href="advanceddom.html">DOM</a>
 <h1 id="f-title" data-tooltip-text="tooltip here">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
