trying  advanced ajax

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 <a href="gallery.html">Gallery</a>
 <a href="animation.html">Animation</a>
 <a href="advanceddom.html">DOM</a>
+<a href="ajax.html">AJax</a>
+
 <h1 id="f-title" data-tooltip-text="tooltip here">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
