--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <a href="animation.html">Animation</a>
 <a href="advanceddom.html">DOM</a>
 <a href="ajax.html">AJax</a>
-
+<a href="test.html">Test</a>
 <h1 id="f-title" data-tooltip-text="tooltip here">Flatland: A Romance of Many Dimensions</h1>
 <div id="f-author">by Edwin A. Abbott</div>
 <h2>Part 1, Section 3</h2>
